# vc-trabajo-final-backend

./: change_cam.sh  change_camera.py  db.py  main.py  people.db  predictor.py  process.py  pyproject.toml  run.sh  utils.py
apps/cameras/: model.py  views.py
apps/face_processor/: face_qualifier.py
apps/face_processor/face_detector/: mediapipe.py  retina_face.py  viola_jones.py
apps/statistics/: model.py  views.py
apps/streaming/: model.py  views.py
